[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataviztoolkit"
version = "0.1.0"
description = "A simple data visualization toolkit for beginners"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "your@email.com"}
]
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn"
]

[project.urls]
Homepage = "https://github.com/rajazain2001/dataviztoolkit"
